Suppressed Java 10 illegal access warnings and enabled parallel builds